add DR history and audit log v1
